# sqlalchemy-solr

./: .pre-commit-config.yaml  AUTHORS  CHANGELOG.md  LICENSE  Pipfile  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: publish-to-pypi.yml  publish-to-test-pypi.yml  pylint.yml
requirements/: common.txt  test.txt
sqlalchemy_solr/: __init__.py  base.py  http.py  message_formatter.py  sasolr.py  solr_type_compiler.py
sqlalchemy_solr/solrdbapi/: __init__.py  _solrdbapi.py  api_exceptions.py  api_globals.py  array.py  solr_reflect.py
src/sqlalchemy_solr/: __init__.py  api_globals.py  base.py  defaults.py  http.py  message_formatter.py  release_flags.py  solr_type_compiler.py  type_map.py  types.py
src/sqlalchemy_solr/admin/: solr_spec.py
src/sqlalchemy_solr/solrdbapi/: _solrdbapi.py  api_exceptions.py  array.py  solr_reflect.py
test/: conftest.py  settings.py  steps.py  test_dataset_creation.py  test_date_range_compilation.py  test_db_creation.py  test_filtering_out_schema.py  test_fixtures.py  test_get_columns.py  test_solr_reflect.py  test_suite.py
test/fixtures/: fixtures.py  sales.csv
tests/: __init__.py  assertions.py  conftest.py  date_range_funcs.py  exceptions.py  setup.py  steps.py  test_dataset_creation.py  test_date_range_compilation.py  test_date_range_compilation_6.py  test_date_range_compilation_9.py  test_db_creation.py  test_filtering_out_schema.py  test_get_columns.py  test_operator_translation.py  test_solr_reflect.py  test_sql_compilation_caching.py  test_sql_compilation_caching_6.py  test_sql_compilation_caching_9.py
tests/fixtures/: fixtures.py  sales.jsonl
