[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sqlalchemy_solr"
dynamic = ["version"]
authors = [
  { name="Ahmed Adel", email="hello@aadel.io" },
]
description = "Apache Solr Dialect for SQLAlchemy"
keywords = ["Apache Solr", "Solr", "SQLAlchemy", "dialect", "Apache Superset"]
readme = "README.md"
license = {text = "MIT License"}
requires-python = ">=3.8"
dependencies = [
  "sqlalchemy~=1.4.7",
  "python-dateutil~=2.8.1",
  "requests~=2.31.0",
  "sqlparse~=0.4.4"
]
classifiers = [
        "Development Status :: 4 - Beta",
        "Environment :: Console",
        "Intended Audience :: Developers",
        "License :: OSI Approved :: MIT License",
        "Programming Language :: Python",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: Implementation :: CPython",
        "Topic :: Database :: Front-Ends",
]

[project.urls]
Homepage = "https://github.com/aadel/sqlalchemy-solr"
Issues = "https://github.com/aadel/sqlalchemy-solr/issues"

[project.entry-points."sqlalchemy.dialects"]
solr = "sqlalchemy_solr.http:SolrDialect_http"
"solr.http" = "sqlalchemy_solr.http:SolrDialect_http"

[tool.setuptools.dynamic]
version = {attr = "sqlalchemy_solr.__version__"}
